# ralph-desktop

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
docs/: versioning.md
docs/plans/: 2026-01-31-appearance-light-theme-design.md
scripts/: bump-version.mjs
scripts/e2e/: run_e2e.mjs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_update.rs  lib.rs  main.rs  test_support.rs
src-tauri/src/adapters/: claude.rs  codex.rs  mod.rs  opencode.rs
src-tauri/src/commands/: loop_commands.rs  mod.rs  project_commands.rs
src-tauri/src/engine/: ai_brainstorm.rs  logs.rs  mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/storage/: mod.rs  models.rs
src/lib/components/: AiBrainstorm.svelte  CliNotInstalled.svelte  LogViewer.svelte  PromptEditor.svelte  SessionList.svelte  TaskDetail.svelte
src/lib/i18n/locales/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  ja.json  pt.json  ru.json  zh-CN.json  zh-TW.json
src/lib/services/: tauri.ts
src/lib/stores/: loop.ts  projects.ts  settings.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
